提交注册成功
用户注册邮箱校验及注册成功个人资料完善页面提交

--- a/FE/regist.html
+++ b/FE/regist.html
@@ -131,7 +131,7 @@
 
 
 <!-- regist_box -->
-<div id="regist_box">
+<div id="regist_box" class="login_bg">
     <div id="regist_form" class="sign_form">
         <div class="reg_tt clearfix">
             <h1 class="left">注册新账号</h1>
