--- a/FE/regist_form.html
+++ b/FE/regist_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录-懒人游</title>
+    <title>注册成功-完善资料-懒人游</title>
     <!-- 全站通用 -->
     <link rel="shortcut icon" type="image/ico" href="imgs/favicon.ico">
     <link rel="stylesheet" href="css/init.css">
@@ -13,7 +13,7 @@
 
     <!-- 页面自用 -->
     <link rel="stylesheet" href="css/regist.css">
-
+    <script src="js/regist.js"></script>
     <!-- 页面自用 -->
 
 
@@ -132,32 +132,63 @@
 
 
 <!-- regist_box -->
-<div id="regist_box" class="login_bg">
-    <div id="regist_form" class="sign_form">
-        <div class="reg_tt clearfix">
-            <h1 class="left">登录懒人游</h1>
-            <p class="right">还没有账号？马上[<a href="regist.html">注册</a>]</p>
-        </div>
+<div id="regist_box">
+    <div class="form_success_box">
+        <h1 class="success suc_ico">恭喜你已经成为懒人游正式用户</h1>
+        <span class="gray">为了更好的体验懒人游，请先完善自己的基本资料！</span>
 
         <div class="form_table">
             <table cellpadding="0" cellspacing="0" border="0">
                 <tr>
-                    <td width="18%" align="right"><span class="ft_14">电子邮件：</span></td>
-                    <td width="40%"><input type="text" class="input_220"></td>
-                    <td><span class="form_notice"></span></td>
+                    <td width="18%" align="right"><span class="ft_14">昵称：</span></td>
+                    <td><input type="text" class="input_220"></td>
                 </tr>
                 <tr>
-                    <td align="right"><span class="ft_14">密码：</span></td>
-                    <td><input type="password" class="input_220"></td>
-                    <td><span class="form_notice"></span></td>
+                    <td align="right"><span class="ft_14">邮箱：</span></td>
+                    <td><i>mr.sheak@gmail.com</i></td>
                 </tr>
                 <tr>
-                    <td align="right"><span class="ft_14">验证码：</span></td>
-                    <td colspan="2"><input type="text" class="input_70" maxlength="4"> <div id="form_code"><img src="imgs/code.jpg" alt=""> </div><span id="changeCode">看不清，<a href="javascript:;">换一张</a></span></td>
+                    <td align="right"><span class="ft_14">自我介绍：</span></td>
+                    <td><textarea class="textarea" name="" id="" cols="30" rows="10" placeholder="请输入自我介绍 不超过200字"></textarea></td>
+                </tr>
+                <tr>
+                    <td align="right"><span class="ft_14">现居住地：</span></td>
+                    <td>
+                        <select name="" id="" class="select">
+                            <option value="0">城市</option>
+                            <option value="1">加州</option>
+                            <option value="2">旧金山</option>
+                            <option value="3">纽约</option>
+                        </select>
+
+                        <select name="" id="" class="select">
+                            <option value="0">地区</option>
+                            <option value="1">加州</option>
+                            <option value="2">旧金山</option>
+                            <option value="3">纽约</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td width="18%" align="right"><span class="ft_14">曾居住地：</span></td>
+                    <td><input type="text" class="input_100"></td>
+                </tr>
+                <tr>
+                    <td width="18%" align="right"></td>
+                    <td>
+                        <input type="checkbox" id="be_planner">
+                        <label for="be_planner" class="planner_tt">我想成为规划师<span>( 高质量的游记能更快通过申请，现在就去<a href="javascript:;" target="_blank">写游记</a> )</span></label>
+                    </td>
+                </tr>
+                <tr id="planner_box" class="hide">
+                    <td width="18%" align="right"><span class="ft_14">可策划地区：</span></td>
+                    <td>
+                    <div class="label_box hide"><ul class="label clearfix"></ul></div>
+                    <input id="last_home" type="text" class="input_100" placeholder="用分号分隔多个地区"></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><a href="javascript:;" class="btn blue_btn">登&nbsp;&nbsp;录</a>  <a id="get_pwd" href="">忘记密码?</a></td>
+                    <td><a href="javascript:;" class="btn blue_btn">提交修改</a></td>
                     <td></td>
                 </tr>
             </table>
