--- a/FE/regist_mail.html
+++ b/FE/regist_mail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录-懒人游</title>
+    <title>查看确认邮件-懒人游</title>
     <!-- 全站通用 -->
     <link rel="shortcut icon" type="image/ico" href="imgs/favicon.ico">
     <link rel="stylesheet" href="css/init.css">
@@ -13,7 +13,7 @@
 
     <!-- 页面自用 -->
     <link rel="stylesheet" href="css/regist.css">
-
+    <script src="js/regist.js"></script>
     <!-- 页面自用 -->
 
 
@@ -132,35 +132,24 @@
 
 
 <!-- regist_box -->
-<div id="regist_box" class="login_bg">
-    <div id="regist_form" class="sign_form">
-        <div class="reg_tt clearfix">
-            <h1 class="left">登录懒人游</h1>
-            <p class="right">还没有账号？马上[<a href="regist.html">注册</a>]</p>
+<div id="regist_box">
+    <div class="form_mail_box">
+        <h3>确认邮件已发到你的 <a class="user_reg_mail" href="mailto:mr.sheak@gmail.com">mr.sheak@gmail.com</a> 邮箱,需要你点击邮件中的链接来完成注册。</h3>
+
+        <div class="clearfix">
+            <div class="left">
+                <a href="" class="btn blue_btn big_btn">登陆邮箱查收确认邮件</a>
+            </div>
+            <div class="left">没收到邮件？<a id="resend_mail" href="javascript:;">再发一次</a></div>
         </div>
 
-        <div class="form_table">
-            <table cellpadding="0" cellspacing="0" border="0">
-                <tr>
-                    <td width="18%" align="right"><span class="ft_14">电子邮件：</span></td>
-                    <td width="40%"><input type="text" class="input_220"></td>
-                    <td><span class="form_notice"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><span class="ft_14">密码：</span></td>
-                    <td><input type="password" class="input_220"></td>
-                    <td><span class="form_notice"></span></td>
-                </tr>
-                <tr>
-                    <td align="right"><span class="ft_14">验证码：</span></td>
-                    <td colspan="2"><input type="text" class="input_70" maxlength="4"> <div id="form_code"><img src="imgs/code.jpg" alt=""> </div><span id="changeCode">看不清，<a href="javascript:;">换一张</a></span></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td><a href="javascript:;" class="btn blue_btn">登&nbsp;&nbsp;录</a>  <a id="get_pwd" href="">忘记密码?</a></td>
-                    <td></td>
-                </tr>
-            </table>
+        <div class="form_mail_msg">
+            <h2>没收到确认信怎么办？</h2>
+            <ol>
+                <li>检查Email地址有没有写错</li>
+                <li>看看是否在垃圾邮箱里</li>
+                <li>如未收到激活邮件，请发送邮件至下面邮箱完成激活：<a href="mailto:info@lanrenyou.com">info@lanrenyou.com</a></li>
+            </ol>
         </div>
     </div>
 </div>
