提交搜索结果页
提交搜索结果页
规划师搜索和游记搜索公用一套样式，套页面的时候套两个页面

--- a/FE/search.html
+++ b/FE/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>找游记-懒人游</title>
+    <title>搜索游记-懒人游</title>
     <!-- 全站通用 -->
     <link rel="shortcut icon" type="image/ico" href="imgs/favicon.ico">
     <link rel="stylesheet" href="css/init.css">
@@ -133,12 +133,15 @@
 
 <!-- waper_box -->
 <div class="waper_box">
-    <h1 class="warper_tt yj_icon">找游记</h1>
+    <h1 class="warper_tt search_icon">搜索“美国”的相关结果</h1>
     
     <ul class="warper_tab clearfix">
-        <li class="cur">热门游记</li>
-        <li><a href="javascript:;">最新游记</a></li>
+        <li class="cur">游记</li>
+        <li><a href="javascript:;">规划师</a></li>
     </ul>
+
+
+    <div class="no_result">对不起，未找到匹配内容，请更换搜索条件</div>
 
     <ul class="yj_list clearfix">
         <!-- 游记列表循环开始 -->
@@ -236,196 +239,119 @@
                 <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
             </dl>
         </li>
-        <li class="yj_item">
-            <dl>
-                <dt>
-                    <h2>美国66号公路自驾全攻略,翻滚吧，青春！</h2>
-                    <div class="yj_author">
-                        <img class="u_sm" src="imgs/user_face.jpg" alt="" width="24" height="24">
-                        <i class="author_link" href="javascript:;"><a href="#">shell_corona</a>
-                            <div class="author_info hide">
-                                <div class="author_tt">
-                                    <i class="ico up_ico"></i>
-                                </div>
-
-                                <div class="author_detail clearfix">
-                                    <dl>
-                                        <dt><img src="imgs/user_face.jpg" alt=""></dt>
-                                        <dt class="add_form">
-                                            <a href="javascript:;" class="add_btn"></a>
-                                        </dt>
-                                        <dd>
-                                            <span class="vip_ico"><a href="#">shell_corona</a></span>
-                                            <p>
-                                                <span>关注 20</span>
-                                                <span>粉丝 131</span>
-                                                <span>游记 <a href="#">15</a></span>
-                                            </p>
-                                        </dd>
-                                    </dl>
-
-                                    <ul class="author_yj_last">
-                                        <li class="gray">最新游记</li>
-                                        <li><a href="">【美国66号公路自驾全攻略】翻滚吧，青春！</a></li>
-                                        <li><a href="">美国梦东西海岸的浮光掠影</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </i>
-                        <span class="ico icon_time">2014-05-01</span>
-                        <span class="ico icon_eye">2308</span>
-                    </div>
-
-                    <div class="yj_info hide">
-                        旅途就像人生，起先是兴奋不已地做加法，偶后是难以取舍地做减法，而真正开始的过程，是不得不忍痛的被减法和被除法。当然，上帝在关上一扇窗的时候也一定会同时打开一扇门，所以，就一定还有意想不到的被加法甚至被乘法...
-                    </div>
-                </dt>
-                <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
-            </dl>
-        </li>
-        <li class="yj_item">
-            <dl>
-                <dt>
-                    <h2>美国66号公路自驾全攻略,翻滚吧，青春！</h2>
-                    <div class="yj_author">
-                        <img class="u_sm" src="imgs/user_face.jpg" alt="" width="24" height="24">
-                        <i class="author_link" href="javascript:;"><a href="#">shell_corona</a>
-                            <div class="author_info hide">
-                                <div class="author_tt">
-                                    <i class="ico up_ico"></i>
-                                </div>
-
-                                <div class="author_detail clearfix">
-                                    <dl>
-                                        <dt><img src="imgs/user_face.jpg" alt=""></dt>
-                                        <dt class="add_form">
-                                            <a href="javascript:;" class="add_btn"></a>
-                                        </dt>
-                                        <dd>
-                                            <span class="vip_ico"><a href="#">shell_corona</a></span>
-                                            <p>
-                                                <span>关注 20</span>
-                                                <span>粉丝 131</span>
-                                                <span>游记 <a href="#">15</a></span>
-                                            </p>
-                                        </dd>
-                                    </dl>
-
-                                    <ul class="author_yj_last">
-                                        <li class="gray">最新游记</li>
-                                        <li><a href="">【美国66号公路自驾全攻略】翻滚吧，青春！</a></li>
-                                        <li><a href="">美国梦东西海岸的浮光掠影</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </i>
-                        <span class="ico icon_time">2014-05-01</span>
-                        <span class="ico icon_eye">2308</span>
-                    </div>
-
-                    <div class="yj_info hide">
-                        旅途就像人生，起先是兴奋不已地做加法，偶后是难以取舍地做减法，而真正开始的过程，是不得不忍痛的被减法和被除法。当然，上帝在关上一扇窗的时候也一定会同时打开一扇门，所以，就一定还有意想不到的被加法甚至被乘法...
-                    </div>
-                </dt>
-                <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
-            </dl>
-        </li>
-        <li class="yj_item">
-            <dl>
-                <dt>
-                    <h2>美国66号公路自驾全攻略,翻滚吧，青春！</h2>
-                    <div class="yj_author">
-                        <img class="u_sm" src="imgs/user_face.jpg" alt="" width="24" height="24">
-                        <i class="author_link" href="javascript:;"><a href="#">shell_corona</a>
-                            <div class="author_info hide">
-                                <div class="author_tt">
-                                    <i class="ico up_ico"></i>
-                                </div>
-
-                                <div class="author_detail clearfix">
-                                    <dl>
-                                        <dt><img src="imgs/user_face.jpg" alt=""></dt>
-                                        <dt class="add_form">
-                                            <a href="javascript:;" class="add_btn"></a>
-                                        </dt>
-                                        <dd>
-                                            <span class="vip_ico"><a href="#">shell_corona</a></span>
-                                            <p>
-                                                <span>关注 20</span>
-                                                <span>粉丝 131</span>
-                                                <span>游记 <a href="#">15</a></span>
-                                            </p>
-                                        </dd>
-                                    </dl>
-
-                                    <ul class="author_yj_last">
-                                        <li class="gray">最新游记</li>
-                                        <li><a href="">【美国66号公路自驾全攻略】翻滚吧，青春！</a></li>
-                                        <li><a href="">美国梦东西海岸的浮光掠影</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </i>
-                        <span class="ico icon_time">2014-05-01</span>
-                        <span class="ico icon_eye">2308</span>
-                    </div>
-
-                    <div class="yj_info hide">
-                        旅途就像人生，起先是兴奋不已地做加法，偶后是难以取舍地做减法，而真正开始的过程，是不得不忍痛的被减法和被除法。当然，上帝在关上一扇窗的时候也一定会同时打开一扇门，所以，就一定还有意想不到的被加法甚至被乘法...
-                    </div>
-                </dt>
-                <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
-            </dl>
-        </li>
-        <li class="yj_item">
-            <dl>
-                <dt>
-                    <h2>美国66号公路自驾全攻略,翻滚吧，青春！</h2>
-                    <div class="yj_author">
-                        <img class="u_sm" src="imgs/user_face.jpg" alt="" width="24" height="24">
-                        <i class="author_link" href="javascript:;"><a href="#">shell_corona</a>
-                            <div class="author_info hide">
-                                <div class="author_tt">
-                                    <i class="ico up_ico"></i>
-                                </div>
-
-                                <div class="author_detail clearfix">
-                                    <dl>
-                                        <dt><img src="imgs/user_face.jpg" alt=""></dt>
-                                        <dt class="add_form">
-                                            <a href="javascript:;" class="add_btn"></a>
-                                        </dt>
-                                        <dd>
-                                            <span class="vip_ico"><a href="#">shell_corona</a></span>
-                                            <p>
-                                                <span>关注 20</span>
-                                                <span>粉丝 131</span>
-                                                <span>游记 <a href="#">15</a></span>
-                                            </p>
-                                        </dd>
-                                    </dl>
-
-                                    <ul class="author_yj_last">
-                                        <li class="gray">最新游记</li>
-                                        <li><a href="">【美国66号公路自驾全攻略】翻滚吧，青春！</a></li>
-                                        <li><a href="">美国梦东西海岸的浮光掠影</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </i>
-                        <span class="ico icon_time">2014-05-01</span>
-                        <span class="ico icon_eye">2308</span>
-                    </div>
-
-                    <div class="yj_info hide">
-                        旅途就像人生，起先是兴奋不已地做加法，偶后是难以取舍地做减法，而真正开始的过程，是不得不忍痛的被减法和被除法。当然，上帝在关上一扇窗的时候也一定会同时打开一扇门，所以，就一定还有意想不到的被加法甚至被乘法...
-                    </div>
-                </dt>
-                <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
-            </dl>
-        </li>
-
         <!-- 游记列表循环结束 -->
+    </ul>
+
+    <ul class="planner_list clearfix">
+        <!-- 规划师列表循环开始 -->
+        <li class="planner_item">
+            <dl class="clearfix">
+                <dt class="planner_face">
+                    <img src="imgs/user_face.jpg" alt="">
+                </dt>
+                <dd class="planner_name">
+                    <span class="vip_ico"><a href="#">shell_corona</a></span>
+                </dd>
+                <dd class="planner_info">
+                    <span>关注 20</span>
+                    <span>粉丝 131</span>
+                    <span>游记 <a href="#">15</a></span>
+
+                    <a href="javascript:;" class="btn_s add_btn"></a>
+                    <a href="javascript:;" class="btn_s msg_btn"></a>
+                </dd>
+            </dl>
+
+            <dl class="plan_area clearfix">
+                <dt>可策划地区：</dt>
+                <dd>
+                    <ul>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <!-- 规划师游记 -->
+            <div class="planner_yj_list">
+                <p class="more_yj"><a href="#">查看全部游记</a></p>
+                <div class="planner_yj_detail clearfix">
+                    <div class="left">
+                        <a href="#">
+                            <img src="imgs/yj_detail_img.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="right">
+                        <ul>
+                            <li><a href="#">【美国66号公路自驾全攻略】翻滚吧，青春！</a><span>2014-01-01</span></li>
+                            <li><a href="#">美国梦东西海岸的浮光掠影</a><span>2014-01-01</span></li>
+                            <li><a href="#">【美国66号公路自驾全攻略】翻滚吧，青春！</a><span>2014-01-01</span></li>
+                            <li><a href="#">美国梦东西海岸的浮光掠影</a><span>2014-01-01</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="planner_item">
+            <dl class="clearfix">
+                <dt class="planner_face">
+                    <img src="imgs/user_face.jpg" alt="">
+                </dt>
+                <dd class="planner_name">
+                    <span class="vip_ico"><a href="#">shell_corona</a></span>
+                </dd>
+                <dd class="planner_info">
+                    <span>关注 20</span>
+                    <span>粉丝 131</span>
+                    <span>游记 <a href="#">15</a></span>
+
+                    <a href="javascript:;" class="btn_s add_btn"></a>
+                    <a href="javascript:;" class="btn_s msg_btn"></a>
+                </dd>
+            </dl>
+
+            <dl class="plan_area clearfix">
+                <dt>可策划地区：</dt>
+                <dd>
+                    <ul>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                        <li><a href="javascript:;">美国纽约</a></li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <!-- 规划师游记 -->
+            <div class="planner_yj_list">
+                <p class="more_yj"><a href="#">查看全部游记</a></p>
+                <div class="planner_yj_detail clearfix">
+                    <div class="left">
+                        <a href="#">
+                            <img src="imgs/yj_detail_img.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="right">
+                        <ul>
+                            <li><a href="#">【美国66号公路自驾全攻略】翻滚吧，青春！</a><span>2014-01-01</span></li>
+                            <li><a href="#">美国梦东西海岸的浮光掠影</a><span>2014-01-01</span></li>
+                            <li><a href="#">【美国66号公路自驾全攻略】翻滚吧，青春！</a><span>2014-01-01</span></li>
+                            <li><a href="#">美国梦东西海岸的浮光掠影</a><span>2014-01-01</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </li>
     </ul>
 
 
