--- a/lry_webapp/src/main/webapp/WEB-INF/ftl/planner/planner.html
+++ b/lry_webapp/src/main/webapp/WEB-INF/ftl/planner/planner.html
@@ -165,7 +165,7 @@
             </dl>
 
             <dl class="plan_area clearfix">
-                <dt>可策划地区：</dt>
+                <dt>可规划地区：</dt>
                 <dd>
                     <ul>
                         <li><a href="javascript:;">美国纽约</a></li>
@@ -219,7 +219,7 @@
             </dl>
 
             <dl class="plan_area clearfix">
-                <dt>可策划地区：</dt>
+                <dt>可规划地区：</dt>
                 <dd>
                     <ul>
                         <li><a href="javascript:;">美国纽约</a></li>
@@ -273,7 +273,7 @@
             </dl>
 
             <dl class="plan_area clearfix">
-                <dt>可策划地区：</dt>
+                <dt>可规划地区：</dt>
                 <dd>
                     <ul>
                         <li><a href="javascript:;">美国纽约</a></li>
@@ -327,7 +327,7 @@
             </dl>
 
             <dl class="plan_area clearfix">
-                <dt>可策划地区：</dt>
+                <dt>可规划地区：</dt>
                 <dd>
                     <ul>
                         <li><a href="javascript:;">美国纽约</a></li>
