--- a/FE/create.html
+++ b/FE/create.html
@@ -163,7 +163,7 @@
                 <div id="upBox" class="moveBox" style="top: 0px; z-index: 0;"></div>
                 <div id="downBox" class="moveBox" style="z-index: 0; top: 0px;"></div>
 
-                <!-- <div class="album_block clone">
+                <div class="album_block clone">
                     <input type="hidden" value="028225222">
                     <div class="a_title">
                         <div class="left img_left">
@@ -176,7 +176,38 @@
                             <a href="javascript:;" class="J_delete">删除</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
+
+                <div class="album_block clone">
+                    <input type="hidden" value="028225222">
+                    <div class="a_title">
+                        <div class="left img_left">
+                            <img src="http://img.lanrenyou.com/2014/07/16/145826730_s.jpg" alt="">
+                        </div>
+                        <div class="right">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <a href="javascript:;" class="J_moveUp">向上</a>
+                            <a href="javascript:;" class="J_moveDown">向下</a>
+                            <a href="javascript:;" class="J_delete">删除</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="album_block clone">
+                    <input type="hidden" value="028225222">
+                    <div class="a_title">
+                        <div class="left img_left">
+                            <img src="http://img.lanrenyou.com/2014/07/16/145826730_s.jpg" alt="">
+                        </div>
+                        <div class="right">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <a href="javascript:;" class="J_moveUp">向上</a>
+                            <a href="javascript:;" class="J_moveDown">向下</a>
+                            <a href="javascript:;" class="J_delete">删除</a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
 
