--- a/FE/edit_youji.html
+++ b/FE/edit_youji.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>新建游记-懒人游</title>
+    <title>修改游记-懒人游</title>
     <!-- 全站通用 -->
     <link rel="shortcut icon" type="image/ico" href="imgs/favicon.ico">
     <link rel="stylesheet" href="css/init.css">
@@ -163,7 +163,7 @@
                 <div id="upBox" class="moveBox" style="top: 0px; z-index: 0;"></div>
                 <div id="downBox" class="moveBox" style="z-index: 0; top: 0px;"></div>
 
-                <!-- <div class="album_block clone">
+                <div class="album_block clone">
                     <input type="hidden" value="028225222">
                     <div class="a_title">
                         <div class="left img_left">
@@ -176,8 +176,37 @@
                             <a href="javascript:;" class="J_delete">删除</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
+                <div class="album_block clone">
+                    <input type="hidden" value="028225222">
+                    <div class="a_title">
+                        <div class="left img_left">
+                            <img src="http://img.lanrenyou.com/2014/07/16/145826730_s.jpg" alt="">
+                        </div>
+                        <div class="right">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <a href="javascript:;" class="J_moveUp">向上</a>
+                            <a href="javascript:;" class="J_moveDown">向下</a>
+                            <a href="javascript:;" class="J_delete">删除</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="album_block clone">
+                    <input type="hidden" value="028225222">
+                    <div class="a_title">
+                        <div class="left img_left">
+                            <img src="http://img.lanrenyou.com/2014/07/16/145826730_s.jpg" alt="">
+                        </div>
+                        <div class="right">
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <a href="javascript:;" class="J_moveUp">向上</a>
+                            <a href="javascript:;" class="J_moveDown">向下</a>
+                            <a href="javascript:;" class="J_delete">删除</a>
+                        </div>
+                    </div>
+                </div>
 
 
             </div>
