--- a/FE/search.html
+++ b/FE/search.html
@@ -10,6 +10,10 @@
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <!-- 全站通用 -->
+    
+    <!-- 弹层 -->
+    <script type="text/javascript" src="js/plug/jquery.reveal.js"></script>
+    <link rel="stylesheet" href="css/plug/reveal.css">
 
     <!-- 页面自用 -->
     <link rel="stylesheet" href="css/waper.css">
@@ -148,6 +152,7 @@
         <li class="yj_item">
             <dl>
                 <dt>
+                <a href="12">
                     <h2>美国66号公路自驾全攻略,翻滚吧，青春！</h2>
                     <div class="yj_author">
                         <img class="u_sm" src="imgs/user_face.jpg" alt="" width="24" height="24">
@@ -188,6 +193,7 @@
                     <div class="yj_info hide">
                         旅途就像人生，起先是兴奋不已地做加法，偶后是难以取舍地做减法，而真正开始的过程，是不得不忍痛的被减法和被除法。当然，上帝在关上一扇窗的时候也一定会同时打开一扇门，所以，就一定还有意想不到的被加法甚至被乘法...
                     </div>
+                    </a>
                 </dt>
                 <dd><a href="#"><img src="imgs/yj_img.jpg" alt=""></a></dd>
             </dl>
@@ -208,7 +214,7 @@
                                     <dl>
                                         <dt><img src="imgs/user_face.jpg" alt=""></dt>
                                         <dt class="add_form">
-                                            <a href="javascript:;" class="add_btn"></a>
+                                            <a href="javascript:;" class="added_btn"></a>
                                         </dt>
                                         <dd>
                                             <span class="vip_ico"><a href="#">shell_corona</a></span>
@@ -398,7 +404,17 @@
     </div>
 </div>
 
+<a id="test" href="##">asassa</a>
 
+<!-- 返回登陆 -->
+<!-- <div id="back_to_login" class="reveal-modal">
+    <h2>请先登陆懒人游!</h2>
+    <p>
+        <a href="http://www.lanrenyou.com/login?redir=">马上登陆</a> | 
+        <a href="#">立即注册</a>
+    </p>
+    <a class="close-reveal-modal close_d">&#215;</a>
+</div> -->
 
 
     
