upload js & css

--- a/FE/create.html
+++ b/FE/create.html
@@ -163,7 +163,7 @@
                 <div id="upBox" class="moveBox" style="top: 0px; z-index: 0;"></div>
                 <div id="downBox" class="moveBox" style="z-index: 0; top: 0px;"></div>
 
-                <!-- <div class="album_block clone">
+                <div class="album_block clone">
                     <input type="hidden" value="028225222">
                     <div class="a_title">
                         <div class="left img_left">
@@ -176,7 +176,7 @@
                             <a href="javascript:;" class="J_delete">删除</a>
                         </div>
                     </div>
-                </div> -->
+                </div>
 
 
 
