--- a/FE/search.html
+++ b/FE/search.html
@@ -18,6 +18,7 @@
     <!-- 页面自用 -->
     <link rel="stylesheet" href="css/waper.css">
     <script src="js/waper.js"></script>
+    <script src="js/search.js"></script>
     <!-- 页面自用 -->
 
 
