upload index banner

--- a/FE/index.html
+++ b/FE/index.html
@@ -137,16 +137,16 @@
     <div class="flexslider">
       <ul class="slides">
         <li>
-            <a href="javascript:;"><img src="imgs/slide/kitchen_adventurer_cheesecake_brownie.jpg" /></a>
+            <a href="javascript:;" target="_blank"><img src="imgs/slide/new_page.jpg" /></a>
         </li>
         <li>
-            <a href="javascript:;"><img src="imgs/slide/kitchen_adventurer_lemon.jpg" /></a>
+            <a href="http://www.lanrenyou.com/travel/47" target="_blank"><img src="imgs/slide/banner_20140802_1.jpg" /></a>
         </li>
         <li>
-            <a href="javascript:;"><img src="imgs/slide/kitchen_adventurer_donut.jpg" /></a>
+            <a href="http://www.lanrenyou.com/travel/66" target="_blank"><img src="imgs/slide/banner_20140802_2.jpg" /></a>
         </li>
         <li>
-            <a href="javascript:;"><img src="imgs/slide/kitchen_adventurer_caramel.jpg" /></a>
+            <a href="http://www.lanrenyou.com/travel/224" target="_blank"><img src="imgs/slide/banner_20140802_3.jpg" /></a>
         </li>
       </ul>
     </div>
