--- a/FE/index.html
+++ b/FE/index.html
@@ -137,7 +137,7 @@
     <div class="flexslider">
       <ul class="slides">
         <li>
-            <a href="javascript:;" target="_blank"><img src="imgs/slide/new_page.jpg" /></a>
+            <a href="javascript:;"><img src="imgs/slide/new_page.jpg" /></a>
         </li>
         <li>
             <a href="http://www.lanrenyou.com/travel/47" target="_blank"><img src="imgs/slide/banner_20140802_1.jpg" /></a>
