user login icon

--- a/FE/index.html
+++ b/FE/index.html
@@ -79,7 +79,7 @@
             <li>
                 <img src="imgs/user_face.jpg" width="20" height="20" alt="" />
             </li>
-            <li class="wap_show bd_right">sheak</li>
+            <li class="wap_show bd_right vip_ico">sheak</li>
             <li class="wap_show bd_right"><a href="javascript:;">发布游记</a></li>
             <li id="msg" class="wap_show bd_right show_more">
                 消息中心(5)
