--- a/FE/youji_detail.html
+++ b/FE/youji_detail.html
@@ -273,6 +273,16 @@
                     </dd>
                 </dl>
 
+                <!-- 价格 -->
+                <dl class="plan_area clearfix">
+                    <dt>价格：</dt>
+                    <dd>
+                        <ul>
+                            <li>500元/天</li>
+                        </ul>
+                    </dd>
+                </dl>
+
 
                 <!-- TA的游记 -->
                 <div id="my_youji_list" class="detail_right_list">
