add u messgae  list

--- a/FE/admin/detail.html
+++ b/FE/admin/detail.html
@@ -36,7 +36,7 @@ body {
             <td width="46%" valign="middle"><table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tr>
                 <td width="5%"><div align="center"><img src="img/tb.gif" width="16" height="16" /></div></td>
-                <td width="95%" class="STYLE1"><span class="STYLE3">你当前的位置</span>：[管理后台]-[私信管理]
+                <td width="95%" class="STYLE1"><span class="STYLE3">你当前的位置</span>：[管理后台]-[<a href="list.html">私信管理</a>]-[<a href="list_detail.html">sheak的全部私信</a>]-[sheak与游客1的全部私信]
                   
                   <span style="margin-left:30px;">
                     <input type="text" placeholder="关键字/id">
@@ -59,26 +59,37 @@ body {
         <td width="8" background="img/tab_12.gif">&nbsp;</td>
         <td><table width="100%" border="0" cellpadding="0" cellspacing="1" bgcolor="b5d6e6">
           <tr>
-            <td width="10%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">规划师</span></div></td>
-            <td width="30%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">最新收到</span></div></td>
-            <td width="30%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">最新回复</span></div></td>
-            <td width="15%" height="26" background="img/bg.gif" bgcolor="#FFFFFF" class="STYLE1"><div align="center">查看全部</div></td>
+            <td width="10%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">用户</span></div></td>
+            <td width="50%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">内容</span></div></td>
+            <td width="10%" height="26" background="img/bg.gif" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">日期</span></div></td>
           </tr>
           <tr>
             <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">
-              <div align="center"><a href="#" target="_blank">sheak</a></div>
+              <div align="center">游客1</div>
             </div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">[流浪的人 2014/08/21 20:21:44]你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">[lryeditor 2014/09/01 20:21:44]请问你们一行多少人，主要偏向美食还是购物或者是风景名胜？</span></div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE4"><a href="list_detail.html">全部私信</a></span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">2014年9月20日11:21:32</div></td>
           </tr>
           <tr>
             <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">
-              <div align="center"><a href="#" target="_blank">sheak</a></div>
+              <div align="center">sheak</div>
             </div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">[流浪的人 2014/08/21 20:21:44]你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">[lryeditor 2014/09/01 20:21:44]请问你们一行多少人，主要偏向美食还是购物或者是风景名胜？</span></div></td>
-            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE4"><a href="list_detail.html">全部私信</a></span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">2014年9月20日11:21:32</div></td>
+          </tr>
+          <tr>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">
+              <div align="center">游客1</div>
+            </div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">2014年9月20日11:21:32</div></td>
+          </tr>
+          <tr>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">
+              <div align="center">sheak</div>
+            </div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center"><span class="STYLE1">你好，我想和全家去美国玩一周左右，不知道应该怎么规划，不知道有什么号的推荐没有？</span></div></td>
+            <td height="22" bgcolor="#FFFFFF"><div align="center" class="STYLE1">2014年9月20日11:21:32</div></td>
           </tr>
         </table></td>
         <td width="8" background="img/tab_15.gif">&nbsp;</td>
