--- a/FE/login.html
+++ b/FE/login.html
@@ -176,8 +176,9 @@
                 <div id="erweima" class="hide"></div>
             </li>
             <li class="wb"><a href="javascript:;">新浪微博</a></li>
-            <li class="tt"><a href="javascript:;">腾讯微博</a></li>
-            <li class="qq"><a href="javascript:;">QQ</a></li>
+            <li class="email"><a href="mailto:info@lanrenyou.com">邮箱</a></li>
+            <!-- <li class="tt"><a href="javascript:;">腾讯微博</a></li>
+            <li class="qq"><a href="javascript:;">QQ</a></li> -->
         </ul>
         <p>
             <a href="javascript:;">关于我们</a> | 
